--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -2,9 +2,9 @@
 # Copyright (c) 2024 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 #
-# go to sleep after one hour (1*60*60*1000ms)
+# go to sleep after 15 minutes (1*15*60*1000ms)
 
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 CONFIG_ZMK_SLEEP=y
 
@@ -17,6 +17,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 
@@ -36,6 +37,14 @@ CONFIG_ZMK_POINTING=y
 
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=100
+CONFIG_ZMK_BACKLIGHT_ON_START=n
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+CONFIG_ZMK_AUTO_OFF_USB=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+#nice-view_gem
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_NICE_VIEW_GEM_ANIMATION_MS=3840
