--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -40,3 +40,12 @@ CONFIG_ZMK_BACKLIGHT_BRT_START=100
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+
+# custom display
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+# nice_view_gem
+CONFIG_NICE_VIEW_GEM_ANIMATION_MS=3840
+CONFIG_NICE_VIEW_GEM_WPM_FIXED_RANGE_MAX=120
