--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
 ---
 include:
-  - board: eyelash_corne_left
-    shield: nice_view_gem
+    # - board: eyelash_corne_left
+    #   shield: nice_view_gem
     #snippet: zmk-usb-logging    # Uncomment to log over USB.
   - board: eyelash_corne_right
     shield: nice_view_gem
