--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -23,6 +23,9 @@ CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 # Uncomment the following line to enable NKRO
 #CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
+
 # Some operating systems have problems with full support for consumer keycodes.
 # Uncomment the following line if keycodes labeled "consumer" like C_AC_SEARCH don't work
 #CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
